css/style.css
/* ... */
.aa-content {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    justify-content: center;
    position:relative;
}

.work-1 {
    opacity:0;
    display:block;
    transform: translateX(-15px);
    transition: transform 0.3s linear 0.2s, opacity 0.3s linear 0.2s;
}

.work-2 {
    opacity:0;
    display:block;
    transform: translateX(-15px);
    transition: transform 0.3s linear 0.35s, opacity 0.3s linear 0.35s;
}

.work-3 {
    opacity:0;
    display:block;
    transform: translateX(-15px);
    transition: transform 0.3s linear 0.5s, opacity 0.3s linear 0.5s;
}

.work-4  {
    opacity:0;
    display:block;
    transform: translateX(-15px);
    transition: transform 0.3s linear 0.65s, opacity 0.3s linear 0.65s;
}

#aa-loghi {
    opacity:0;
    transform: translateY(15px);
    transition: transform 0.3s linear 0.15s, opacity 0.3s linear 0.3s;
}


.footer-box-center li {
    opacity:0;
    display:block;
    transform: translateY(15px);
    transition: transform 0.3s linear 0.4s, opacity 0.3s linear 0.4s;
}

#address {
    opacity:0;
    width:100%;
    display:block;
    transform: translateY(15px);
    transition: transform 0.3s linear 0.3s, opacity 0.3s linear 0.3s;
}

.footer-box-right {
    opacity:0;
    display:block;
    transform: translateY(15px);
    transition: transform 0.3s linear 0.5s, opacity 0.3s linear 0.5s;
}

#collaborations span, #aa-title span, #services span {
    opacity:0;
    display:inline-block;
    transform: translateY(15px);
    transition: transform 0.3s linear, opacity 0.3s linear;
}

.footer-box-center.animated li, #address.animated, .footer-box-right.animated, #aa-loghi.animated {
    opacity:1;
    transform: translateY(0);
}

.customer-clients.animated, #collaborations.animated span,
#aa-title.animated span, #services.animated span {
    opacity:1;
    transform: translateY(0);
}

#learn-intro, #learn-intro-2, #learn-outro {
    opacity:0;
    transform: translateY(15px);
    transition: transform 0.3s linear, opacity 0.3s linear;
}
#learn-intro { transition-delay: 0.05s; }
#learn-intro-2 { transition-delay: 0.15s; }
#learn-outro { transition-delay: 0.75s; }
#learn-intro.animated, #learn-intro-2.animated, #learn-outro.animated {
    opacity:1;
    transform: translateY(0);
}

.work-1.animated, .work-2.animated, .work-3.animated, .work-4.animated {
    opacity:1;
    transform: translateX(0);
}

#text1{
    margin-bottom:15vh;
}

#customers span {
    white-space: nowrap;
}
#intro i, #ftitle i{
    font-style:normal;
}
#ftitle i{
    white-space: nowrap;
}
#ftitle{
    position: relative;
    white-space: normal;
    display:inline-block;
    /*width: min-content;*/
}
#ftitle:after{
    content:"";
    position:absolute;
    bottom:0;
    left:0;
    height:2px;
    background-color:#fff;
    width:0%;
    transition: width 0.5s ease-out;
}
#ftitle:hover::after{
    width:100%;
}
/**************************/
#text1 span, #intro span, #award-text span, #ftitle span {
    display:inline-block;
    opacity:0;
    transform: translateY(15px);
    transition-timing-function: cubic-bezier(.25,.46,.45,.94), cubic-bezier(.25,.46,.45,.94);
    transition-property: transform, opacity;
    transition-duration: 0.45s, 0.45s;
}

#social-media li, #branding li, #web-design li, #advertising li {
    display:block;
    opacity:0;
    transform: translateX(-15px);
    transition-timing-function: cubic-bezier(.25,.46,.45,.94), cubic-bezier(.25,.46,.45,.94);
    transition-property: transform, opacity;
    transition-duration: 0.45s, 0.45s;
}

#text1.animated span, #intro.animated span, #award-text.animated span, #ftitle.animated span {
    opacity:1;
    transform: translateY(0px);
}

#social-media.animated li, #branding.animated li, #web-design.animated li, #advertising.animated li {
    opacity:1;
    transform: translateX(0px);
}
/***************************/
#award-text{
    max-width:610px;
    display:block;
    margin-bottom:50px;
}
.bottom_nav{
    width: 50%;
    /*margin: 0px auto;*/
    position:sticky;
    bottom:3vh;
    left:50%;
    transform: translateX(-50%);
    pointer-events: none;
    padding-bottom: 20px;
}
.edit_button{
    position:relative;
    margin-left:120%;
    pointer-events: all;
    /*transform-origin: 50% 50%;*/
    width:120px;
    height:120px;
    /*transition:transform 0.5s ease-out;*/
    transition: top 0.5s cubic-bezier(0.075, 0.82, 0.165, 1), transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
}
.edit_button_pencil{
    display:block;
    width:100%;
    height:100%;
    top:0;
    left:0;
    position:absolute;
    background-image:url('../img/pencil_black.png');
    background-size:100% 100%;
    background-position:center center;
}
.edit_button_text{
    display:block;
    width:100%;
    height:100%;
    transform: scale(1);
    transition:transform 0.3s, opacity 0.3s;
    overflow:hidden;
}
.edit_button_text:before{
    content:"";
    display:block;
    background-image:url('../img/text_black.png');
    background-size:100% 100%;
    background-position:center center;
    width:100%;
    height:100%;
    -webkit-animation: rotation-back 12s infinite linear;
    animation: rotation-back 12s infinite linear;
}
.mainBody.animated .edit_button_pencil{
    background-image:url('../img/pencil_white.png');
}
.mainBody.animated .edit_button_text:before{
    background-image:url('../img/text_white.png');
}
.edit_button:hover .edit_button_text:before{
    -webkit-animation: rotation-back 1s infinite linear;
    animation: rotation-back 1s infinite linear;
}
.edit_button:hover .edit_button_text{
    transform:scale(0);
    opacity:0;
    transition:transform 0.4s linear 0.1s, opacity 0.1s linear 0.1s;
}
.edit_button_point{
    position:absolute;
    top:50%;
    left:50%;
    transform: translate(-50%, -50%) scale(0);
    width:90%;
    height:90%;
    border-radius:50%;
    background-color:#000;
    transition:transform 0.2s ease-out;
}
/* ... */

